force-app/main/default/objects/Routing_Helper__mdt/Routing_Helper__mdt.object-meta.xml
<CustomObject>
    <description>Skills, queues and more</description>
    <label>Routing Helper</label>
    <pluralLabel>Routing Helpers</pluralLabel>
</CustomObject>