force-app/main/default/objects/Routing_Helper__mdt/fields/Additional_Skill__c.field-meta.xml
<CustomField>
    <fullName>Additional_Skill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Skill</label>
    <type>Checkbox</type>
</CustomField>