force-app/main/default/objects/Routing_Helper__mdt/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Answering machine</fullName>
            </value>
            <value>
                <fullName>Complaint General</fullName>
            </value>
            <value>
                <fullName>End customer inquiry</fullName>
            </value>
            <value>
                <fullName>General inquiries</fullName>
            </value>
            <value>
                <fullName>Image database</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Machine</fullName>
            </value>
            <value>
                <fullName>Master data</fullName>
            </value>
            <value>
                <fullName>Master data change</fullName>
            </value>
            <value>
                <fullName>New customer creation</fullName>
            </value>
            <value>
                <fullName>Offers</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>QS complaint</fullName>
            </value>
            <value>
                <fullName>QS Reklamation</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>Training issue</fullName>
            </value>
            <value>
                <fullName>Trainings Issue</fullName>
            </value>
            <value>
                <fullName>Unrated</fullName>
            </value>
            <value>
                <fullName>VIP customers</fullName>
            </value>
            <value>
                <fullName>VIP Kunden</fullName>
            </value>
            <value>
                <fullName>Webshop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>