force-app/main/default/objects/Routing_Helper__mdt/fields/Forward_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Forward_to_Address__c</fullName>
    <description>for External teams, who don&apos;t work with Salesforce</description>
    <label>Forward to Address</label>
    <type>Email</type>
</CustomField>