force-app/main/default/objects/Routing_Helper__mdt/fields/Forward_to_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Forward_to_Addresses__c</fullName>
    <inlineHelpText>enter email addresses here separated by commas</inlineHelpText>
    <label>Forward to Addresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>