force-app/main/default/objects/Routing_Helper__mdt/fields/isCaseForward__c.field-meta.xml
<CustomField>
    <fullName>isCaseForward__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to select whether the routing is for internal (unchecked) or external teams (checked)</description>
    <label>isCaseForward</label>
    <type>Checkbox</type>
</CustomField>