force-app/main/default/objects/Routing_Helper__mdt/fields/Main_Skill__c.field-meta.xml
<CustomField>
    <fullName>Main_Skill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Skill</label>
    <type>Checkbox</type>
</CustomField>