force-app/main/default/objects/Routing_Helper__mdt/fields/Queue_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_API_Name__c</fullName>
    <label>Queue API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>