force-app/main/default/objects/Routing_Helper__mdt/fields/RecordType_API_Name__c.field-meta.xml
<CustomField>
    <fullName>RecordType_API_Name__c</fullName>
    <label>RecordType API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>