force-app/main/default/objects/Routing_Helper__mdt/fields/Skill_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Skill_API_Name__c</fullName>
    <label>Skill API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>