force-app/main/default/objects/Routing_Helper__mdt/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andere</fullName>
                <default>true</default>
                <label>Andere</label>
            </value>
            <value>
                <fullName>Artikelvorbelegung pflegen</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Handel</fullName>
            </value>
            <value>
                <fullName>KAM</fullName>
            </value>
            <value>
                <fullName>Machine</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Ohne Nachricht/ Nachricht unter 8 Sek.</fullName>
            </value>
            <value>
                <fullName>Qualität</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Create access</fullName>
            </value>
            <value>
                <fullName>Delivery inquiries</fullName>
            </value>
            <value>
                <fullName>Foreign object</fullName>
            </value>
            <value>
                <fullName>JJD error</fullName>
            </value>
            <value>
                <fullName>Machine replacement</fullName>
            </value>
            <value>
                <fullName>Machine RG/foreign object</fullName>
            </value>
            <value>
                <fullName>Maintain article pre-assignment</fullName>
            </value>
            <value>
                <fullName>Master data - Company name change</fullName>
            </value>
            <value>
                <fullName>Master data - Price</fullName>
            </value>
            <value>
                <fullName>Master data transfer</fullName>
            </value>
            <value>
                <fullName>No message/message under 8 seconds</fullName>
            </value>
            <value>
                <fullName>Order - Customer</fullName>
            </value>
            <value>
                <fullName>Order - Field service</fullName>
            </value>
            <value>
                <fullName>Order - Webshop</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Out-of-house service</fullName>
            </value>
            <value>
                <fullName>QS-Other</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>