force-app/main/default/objects/Routing_Helper__mdt/fields/ZKS_only__c.field-meta.xml
<CustomField>
    <fullName>ZKS_only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case Type without Subtype clustering and it is only for ZKS Team</description>
    <label>ZKS only</label>
    <type>Checkbox</type>
</CustomField>